@@ -148,6 +148,8 @@ ol_lrc_new (const char *filename)
     }
     ol_lrc_token_free (token);
   }
+  /* Issue 70, avoid empty lyric without new line at the end*/
+  _add_lyric (lrc, "");
   ol_lrc_parser_free (parser);
   g_ptr_array_sort (lrc->items, (GCompareFunc)_cmp_item);
   int id = 0;
@@ -238,7 +240,7 @@ ol_lrc_get_lyric_by_time (struct OlLrc *lrc,
                           double *percentage,
                           int *id)
 {
-  /* ol_log_func (); */
+  ol_log_func ();
   if (id != NULL)
     *id = -1;
   if (text != NULL)
@@ -262,6 +264,7 @@ ol_lrc_get_lyric_by_time (struct OlLrc *lrc,
     else
       r = mid - 1;
   }
+  ol_debug ("asdf");
   if (l == r)                    /* found */
   {
     const struct OlLrcItem *item = ol_lrc_get_item (lrc, l);
@@ -279,7 +282,7 @@ ol_lrc_get_lyric_by_time (struct OlLrc *lrc,
       else
         nextstamp = music_duration;
       *percentage = (double)(time - timestamp) / (nextstamp - timestamp);
-      /* ol_debugf ("timestamp: %d, id: %d, per: %lf\n", timestamp, *id, *percentage); */
+      ol_debugf ("timestamp: %d, id: %d, per: %lf\n", timestamp, *id, *percentage);
     }
   }
 }
