@@ -1,5 +1,7 @@
 2010-03-29  Tiger Soldier  <tigersoldi@gmail.com>
 
+	* src/ol_lrc.c (ol_lrc_new): FIX: issue 70, add an extra empty lyric at the end to avoid lack of lyric text.
+
 	* src/ol_main.c: CHANGE: Check whether music has been changed every second. This should fix issue 69.
 
 	* src/ol_lrc_fetch_minilyrics.c (ol_lrc_fetch_minilyrics_download): FIX: Detect encoding of downloaded lyrics.
